--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+    "name": "l55-vertebrae",
+    "description": "Backbone for personal Laravel 5.5 projects.",
+    "author": "n.l.menke <n.l.menke@live.com>",
+    "license": "MIT",
     "private": true,
     "scripts": {
         "dev": "npm run development",
@@ -17,5 +21,8 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.1.10"
+    },
+    "dependencies": {
+        "font-awesome": "^4.7.0"
     }
 }
