--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue": "^2.1.10"
     },
     "dependencies": {
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "toastr": "^2.1.2"
     }
 }
