--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
     },
     "autoload": {
         "classmap": [
-            "database/seeds",
-            "database/factories"
+            "database"
         ],
         "psr-4": {
             "App\\": "app/"
